# deeplearning

./: .gitignore  README.md  pyproject.toml
notebooks/: MLP.ipynb
src/deeplearning/: __init__.py  train.py
src/deeplearning/layers/: layer.py  linear.py
src/deeplearning/layers/activations/: relu.py  sigmoid.py  tanh.py
src/deeplearning/losses/: cross_entropy.py  loss.py  mean_squared_error.py
src/deeplearning/networks/: mlp.py  neural_network.py
src/deeplearning/optimizers/: adam.py  optimizer.py  stochastic_gradient_descent.py
src/deeplearning/utils/: metrics.py  softmax.py
