[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepleaning"
version = "0.1.0"
description = "A minimal deep learning framework built from scratch with NumPy for educational purposes"
readme = "README.md"
requires-python = ">=3.13.5"
license = { file = "LICENSE" }
authors = [{ name = "Eva", email = "eva.evangelisti03@gmail.com" }]
dependencies = [
    "numpy>=2.3.5",
]

[project.optional-dependencies]
dev = ["black>=25.12.0", "isort>=7.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
